--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "default" # "default" # "air", "aqua", "contrast", "d
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Writing Code"
+title                    : "Code Ops"
 title_separator          : "-"
-subtitle                 : "Made simple"
+subtitle                 : "Writing code made simple"
 name                     : "Aleksander Woźniak"
-description              : "Blog about software engineering, Ruby language and more"
+description              : "Blog about software engineering, Ruby language, tech solutions and more"
 url                      : "https://smilzy.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
