Add and fnish 1st review of Splitting the Monolith

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Aleksander Woźniak"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "Software Engineer <br> Developing in Ruby since 2017."
+  bio              : "Software Engineer <br> Problem solver <br> Developing in Ruby since 2017."
   location         : "Kraków"
   email            :
   links:
