Update jekyll theme, fix about page, fix Google SEO

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : "Writing code made simple"
 name                     : "Aleksander Woźniak"
 description              : "Blog about software engineering, Ruby language, tech solutions and more"
-url                      : "https://smilzy.github.io"
+url                      : "https://blog.wozniakalex.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/kevin-ku-w7ZyuGYNpRQ-unsplash-header.jpg"
