--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Blog"
     url: https://smilzy.github.io
   - title: "About"
-    url: https://smilzy.github.io/about/
+    url: https://blog.wozniakalex.com/about/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
